refactor: Performance optimisation (#12)
