# docs/swagger.json
@@ -32,7 +32,7 @@
                     "pack"
                 ],
                 "summary": "Get the number of packs needed to ship to a customer",
-                "operationId": "shipping-pack-optimizer-pack \t\t\t\t\t\tpost",
+                "operationId": "shipping-pack-optimizer-pack\tpost",
                 "parameters": [
                     {
                         "description": "Request data",
@@ -54,19 +54,19 @@
                     "400": {
                         "description": "Invalid request data",
                         "schema": {
-                            "$ref": "#/definitions/service.HTTPError"
+                            "$ref": "#/definitions/service.badRequestError"
                         }
                     },
                     "405": {
                         "description": "Method not allowed",
                         "schema": {
-                            "$ref": "#/definitions/service.HTTPError"
+                            "$ref": "#/definitions/service.methodNotAllowedError"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/service.HTTPError"
+                            "$ref": "#/definitions/service.internalServerError"
                         }
                     }
                 }
@@ -74,19 +74,6 @@
         }
     },
     "definitions": {
-        "service.HTTPError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 400
-                },
-                "message": {
-                    "type": "string",
-                    "example": "Bad request"
-                }
-            }
-        },
         "service.Pack": {
             "type": "object",
             "properties": {
@@ -120,6 +107,45 @@
                     "items": {
                         "$ref": "#/definitions/service.Pack"
                     }
+                }
+            }
+        },
+        "service.badRequestError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 400
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Bad request"
+                }
+            }
+        },
+        "service.internalServerError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 500
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Internal server error"
+                }
+            }
+        },
+        "service.methodNotAllowedError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 405
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Method not allowed"
                 }
             }
         }
